# pam-krb5-migrate

./: .bzrignore  .gitignore  CHANGELOG  INSTALL  Makefile  Makefile.settings.in  README  README.rst  TODO  configure.ac  login.pam  pam_krb5_migrate.5  pam_krb5_migrate.7  pam_krb5_migrate.c  pam_krb5_migrate.h
.bzr-builddeb/: default.conf
.bzr-builddeb/hooks/export-upstream/: autogen.sh
debian/: .gitignore  README.Debian  changelog  control  copyright  dirs  install  krb5-migrate-mit  libpam-krb5-migrate-heimdal.install  libpam-krb5-migrate-heimdal.manpages  libpam-krb5-migrate-heimdal.pam-config  libpam-krb5-migrate-heimdal.prerm  libpam-krb5-migrate-mit.examples  libpam-krb5-migrate-mit.install  libpam-krb5-migrate-mit.manpages  libpam-krb5-migrate-mit.prerm  libpam-krb5-migrate.pam-config  libpam-krb5-migrate.prerm  manpages  rules  watch
debian/patches/: 01_use_ldflags  series
